--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -207,7 +207,7 @@ jobs:
     env:
       IMAGES: migrations common_tests
     needs:
-      - test_base
+      - test_api
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -291,7 +291,7 @@ jobs:
     env:
       IMAGES: migrations foreman
     needs:
-      - test_base
+      - test_api
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
