--- a/workers/dockerfiles/Dockerfile.downloaders
+++ b/workers/dockerfiles/Dockerfile.downloaders
@@ -8,16 +8,18 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 WORKDIR /home/user
 
 COPY workers/R/dependencies/downloaders/renv.lock .
-COPY common/R/renv_load.R .
-RUN Rscript renv_load.R
+COPY common/R/renv_load.R renv_load_downloaders.R
+RUN Rscript renv_load_downloaders.R
 
 COPY workers/data_refinery_workers/downloaders/requirements.txt .
 RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
 # Install Aspera.
-RUN gpg --keyserver keyserver.ubuntu.com --recv-keys \
-         409B6B1796C275462A1703113804BB82D39DC0E3 \
-         7D2BAF1CF37B13E2069D6956105BD0E739499BDB && \
+# Disable IPv6 to avoid "Cannot assign requested address" error.
+RUN mkdir ~/.gnupg/ && \
+    echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf && \
+    gpg --keyserver keyserver.ubuntu.com --recv-keys \
+        409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB && \
     curl -sSL https://get.rvm.io | bash -s stable --ruby --gems=aspera-cli
 
 USER user
