--- a/common/dockerfiles/Dockerfile.common_tests
+++ b/common/dockerfiles/Dockerfile.common_tests
@@ -8,8 +8,8 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 WORKDIR /home/user
 
 COPY common/R/dependencies/common_tests/renv.lock .
-COPY common/R/renv_load.R .
-RUN Rscript renv_load.R
+COPY common/R/renv_load.R renv_load_common_tests.R
+RUN Rscript renv_load_common_tests.R
 
 COPY common/requirements.txt .
 RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
