--- a/workers/dockerfiles/Dockerfile.affymetrix
+++ b/workers/dockerfiles/Dockerfile.affymetrix
@@ -8,8 +8,8 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 WORKDIR /home/user
 
 COPY workers/R/dependencies/affymetrix/renv.lock .
-COPY common/R/renv_load.R .
-RUN Rscript renv_load.R
+COPY common/R/renv_load.R renv_load_affymetrix.R
+RUN Rscript renv_load_affymetrix.R
 
 COPY workers/R/dependencies/affymetrix/install_ensg_pkgs.R .
 RUN Rscript install_ensg_pkgs.R
