Update deploy configuration
  - Set initial setup umask
  - Show additional docker builder information
  - Use versioned migrations image
  - Update downloaders docker image

--- a/workers/dockerfiles/Dockerfile.downloaders
+++ b/workers/dockerfiles/Dockerfile.downloaders
@@ -16,14 +16,14 @@ RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
 # Install Aspera.
 # Disable IPv6 to avoid "Cannot assign requested address" error.
-RUN mkdir ~/.gnupg/ && \
+RUN mkdir -m 700 ~/.gnupg/ && \
     echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf && \
     gpg --keyserver keyserver.ubuntu.com --recv-keys \
         409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB && \
     curl -sSL https://get.rvm.io | bash -s stable --ruby --gems=aspera-cli
 
 USER user
-RUN source /usr/local/rvm/scripts/rvm && \
+RUN . /usr/local/rvm/scripts/rvm && \
     ascli conf ascp install
 USER root
 
