Remove remote docker builder for Github tests
Move Foreman tests to larger runners.

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -292,7 +292,7 @@ jobs:
       IMAGES: migrations foreman
     needs:
       - test_api
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-m
     steps:
       - uses: actions/checkout@v3
 
