Update docker files: use heredocs syntax
Update downloaders image aspera path.

--- a/api/dockerfiles/Dockerfile.api
+++ b/api/dockerfiles/Dockerfile.api
@@ -5,10 +5,14 @@ FROM $DOCKERHUB_REPO/dr_api_base:$SYSTEM_VERSION
 # Fail in case of an error at any stage in the pipe.
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
-RUN pip install --ignore-installed --no-cache-dir uwsgi && \
-    chmod +x /home/user/collect_and_run_uwsgi.sh && \
-    mkdir -p /tmp/www/static && \
-    chown user /tmp/www/static
+RUN <<EOF
+pip install --ignore-installed --no-cache-dir uwsgi
+chmod +x /home/user/collect_and_run_uwsgi.sh
+mkdir -p /tmp/www/static
+chown user /tmp/www/static
+EOF
+
+ENV SYSTEM_VERSION=$SYSTEM_VERSION
 
 USER user
 
