Move smasher test jobs to larger runners
The culprit is pretty much the same -- insufficient disk space.

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -502,7 +502,7 @@ jobs:
       IMAGES: migrations smasher
     needs:
       - test_base
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-m
     steps:
       - uses: actions/checkout@v3
 
