--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -180,7 +180,7 @@ jobs:
     env:
       IMAGES: migrations api_base
     needs:
-      - check_syntax
+      - test_base
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -502,7 +502,7 @@ jobs:
       IMAGES: migrations smasher
     needs:
       - test_base
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-m
     steps:
       - uses: actions/checkout@v3
 
