Run agilent tests after affymetrix image is ready

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -83,7 +83,7 @@ jobs:
     env:
       IMAGES: migrations affymetrix
     needs:
-      - test_base
+      - test_affymetrix
     runs-on: ubuntu-latest-m
     steps:
       - uses: actions/checkout@v3
