--- a/workers/dockerfiles/Dockerfile.downloaders
+++ b/workers/dockerfiles/Dockerfile.downloaders
@@ -16,7 +16,8 @@ RUN pip3 install --ignore-installed --no-cache-dir -r requirements.txt
 
 # Install Aspera.
 RUN <<EOF
-gpg --keyserver keyserver.ubuntu.com --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+curl -sSL https://rvm.io/mpapis.asc | gpg --import -
+curl -sSL https://rvm.io/pkuczynski.asc | gpg --import -
 curl -sSL https://get.rvm.io | bash -s -- stable --gems=aspera-cli --path /home/user/rvm --ruby
 EOF
 
