Fix no-op tests
  - Use wget instead of curl for gene index downloads
  - Set specific unzip/rm file instructions
  - Set pre-commit to use Python 3.11

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -23,6 +23,8 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.OP_AWS_SECRET_ACCESS_KEY }}
 
       - uses: actions/setup-python@v3
+        with:
+          python-version: '3.11'
 
       - uses: hashicorp/setup-terraform@v2
         with:
