--- a/workers/dockerfiles/Dockerfile.no_op
+++ b/workers/dockerfiles/Dockerfile.no_op
@@ -19,10 +19,10 @@ RUN mkdir -p gene_indexes
 WORKDIR /home/user/gene_indexes
 ENV ID_REFINERY_URL=https://zenodo.org/record/1410647/files/all_1536267482.zip
 RUN <<EOF
-curl -O $ID_REFINERY_URL
 echo $ID_REFINERY_URL > /etc/identifier_refinery_url
-unzip *.zip
-rm *.zip
+wget $ID_REFINERY_URL
+unzip all_1536267482.zip
+rm all_1536267482.zip
 EOF
 # End Noop-specific.
 
